# gundam_robot

./: .gundam.rosinstall  gundam.repos
gundam_robot/: CMakeLists.txt  package.xml
gundam_rx78_control/: CMakeLists.txt  package.xml
gundam_rx78_description/: CMakeLists.txt  package.xml
gundam_rx78_description/launch/: display.launch.py  urdf.launch.py
gundam_rx78_gazebo/: CMakeLists.txt  package.xml
