<?xml version="1.0"?>
<package format="3">
  <name>gundam_rx78_control</name>
  <version>0.0.2</version>
  <description>gundam_rx78_control contains launch and configuration scripts for the ros controller of the GUNDAM RX-78 robot</description>

  <maintainer email="kei.okada@gmail.com">Kei Okada</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/gundam_rx78_control</url>

  <author email="kei.okada@gmail.com">Kei Okada</author>
  <author email="hiraoka@jsk.imi.i.u-tokyo.ac.jp">Naoki Hiraoka</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>launch_xml</exec_depend>

  <!-- for joint_trajectory_controller -->
  <depend>controller_interface</depend>
  <!--<depend>joint_trajectory_controller</depend>-->
  <depend>pluginlib</depend>

  <export>
    <!--<controller_interface plugin="${prefix}/joint_trajectory_controller.xml"/>-->
    <build_type>ament_cmake</build_type>
  </export>

</package>
